--- a/reservas/Cargo.toml
+++ b/reservas/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 chrono = "0.4"
+csv = "1.1.6"
