correcciones, comienzo de iteraccion con user completo

--- a/client_server/Cargo.toml
+++ b/client_server/Cargo.toml
@@ -12,6 +12,7 @@ reqwest = { version = "0.12.4", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 regex = "1.10.4"
 chrono = "0.4"
+csv = "1.1.6"
 
 [[bin]]
 name = "server"
